--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,12 +26,36 @@
 
 
 [[constraint]]
+  name = "github.com/BurntSushi/toml"
+  version = "0.3.1"
+
+[[constraint]]
+  name = "github.com/boltdb/bolt"
+  version = "1.3.1"
+
+[[constraint]]
+  name = "github.com/kayac/go-katsubushi"
+  version = "1.5.4"
+
+[[constraint]]
   branch = "master"
-  name = "github.com/kohkimakimoto/skyforge"
+  name = "github.com/kohkimakimoto/govalidator-report"
+
+[[constraint]]
+  name = "github.com/labstack/echo"
+  version = "3.3.10"
+
+[[constraint]]
+  name = "github.com/labstack/gommon"
+  version = "0.2.8"
 
 [[constraint]]
   name = "github.com/pkg/errors"
   version = "0.8.1"
+
+[[constraint]]
+  name = "github.com/robfig/cron"
+  version = "1.1.0"
 
 [[constraint]]
   name = "github.com/urfave/cli"
