--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,12 +34,24 @@
   version = "1.3.1"
 
 [[constraint]]
+  branch = "master"
+  name = "github.com/cjoudrey/gluahttp"
+
+[[constraint]]
   name = "github.com/kayac/go-katsubushi"
   version = "1.5.4"
 
 [[constraint]]
   branch = "master"
-  name = "github.com/kohkimakimoto/govalidator-report"
+  name = "github.com/kohkimakimoto/boltutil"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/kohkimakimoto/gluaenv"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/kohkimakimoto/gluafs"
 
 [[constraint]]
   name = "github.com/labstack/echo"
@@ -48,6 +60,10 @@
 [[constraint]]
   name = "github.com/labstack/gommon"
   version = "0.2.8"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/otm/gluash"
 
 [[constraint]]
   name = "github.com/pkg/errors"
@@ -60,6 +76,14 @@
 [[constraint]]
   name = "github.com/urfave/cli"
   version = "1.20.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/vadv/gopher-lua-libs"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/yuin/gopher-lua"
 
 [prune]
   go-tests = true
