--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,8 +34,8 @@
   version = "1.3.1"
 
 [[constraint]]
-  branch = "master"
-  name = "github.com/cjoudrey/gluahttp"
+  name = "github.com/cheynewallace/tabby"
+  version = "1.1.0"
 
 [[constraint]]
   name = "github.com/kayac/go-katsubushi"
@@ -46,24 +46,12 @@
   name = "github.com/kohkimakimoto/boltutil"
 
 [[constraint]]
-  branch = "master"
-  name = "github.com/kohkimakimoto/gluaenv"
-
-[[constraint]]
-  branch = "master"
-  name = "github.com/kohkimakimoto/gluafs"
-
-[[constraint]]
   name = "github.com/labstack/echo"
   version = "3.3.10"
 
 [[constraint]]
   name = "github.com/labstack/gommon"
   version = "0.2.8"
-
-[[constraint]]
-  branch = "master"
-  name = "github.com/otm/gluash"
 
 [[constraint]]
   name = "github.com/pkg/errors"
@@ -76,14 +64,6 @@
 [[constraint]]
   name = "github.com/urfave/cli"
   version = "1.20.0"
-
-[[constraint]]
-  branch = "master"
-  name = "github.com/vadv/gopher-lua-libs"
-
-[[constraint]]
-  branch = "master"
-  name = "github.com/yuin/gopher-lua"
 
 [prune]
   go-tests = true
