--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -38,6 +38,10 @@
   version = "1.1.0"
 
 [[constraint]]
+  name = "github.com/fukata/golang-stats-api-handler"
+  version = "1.0.0"
+
+[[constraint]]
   name = "github.com/kayac/go-katsubushi"
   version = "1.5.4"
 
