--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -38,7 +38,11 @@
   version = "1.1.0"
 
 [[constraint]]
-  name = "github.com/fukata/golang-stats-api-handler"
+  name = "github.com/dustin/go-humanize"
+  version = "1.0.0"
+
+[[constraint]]
+  name = "github.com/hako/durafmt"
   version = "1.0.0"
 
 [[constraint]]
