--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -38,6 +38,10 @@
   version = "1.1.0"
 
 [[constraint]]
+  name = "github.com/client9/reopen"
+  version = "1.0.0"
+
+[[constraint]]
   name = "github.com/dustin/go-humanize"
   version = "1.0.0"
 
