--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -46,6 +46,10 @@
   version = "1.0.0"
 
 [[constraint]]
+  name = "github.com/elazarl/go-bindata-assetfs"
+  version = "1.0.0"
+
+[[constraint]]
   name = "github.com/hako/durafmt"
   version = "1.0.0"
 
@@ -58,12 +62,16 @@
   name = "github.com/kohkimakimoto/boltutil"
 
 [[constraint]]
+  branch = "master"
+  name = "github.com/kohkimakimoto/echo-static"
+
+[[constraint]]
   name = "github.com/labstack/echo"
   version = "3.3.10"
 
 [[constraint]]
   name = "github.com/labstack/gommon"
-  version = "0.2.8"
+  version = "0.3.0"
 
 [[constraint]]
   name = "github.com/pkg/errors"
@@ -71,11 +79,16 @@
 
 [[constraint]]
   name = "github.com/robfig/cron"
-  version = "1.1.0"
+  version = "3.0.0"
 
 [[constraint]]
   name = "github.com/urfave/cli"
   version = "1.20.0"
+
+# see https://github.com/urfave/cli/issues/888
+[[override]]
+  name = "github.com/russross/blackfriday"
+  version = "1.5.2"
 
 [prune]
   go-tests = true
