--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
+    "humanize-duration": "^3.21.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "prettier": "^1.18.2",
+    "query-string": "^6.8.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
