--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {},
   "author": "Kohki Makimoto <kohki.makimoto@gmail.com>",
   "dependencies": {
+    "@types/promise.prototype.finally": "^2.0.3",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
