--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {},
   "author": "Kohki Makimoto <kohki.makimoto@gmail.com>",
   "dependencies": {
+    "@types/codemirror": "^0.0.80",
     "@types/promise.prototype.finally": "^2.0.3",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
@@ -19,6 +20,7 @@
     "@types/react-router-dom": "^5.1.1",
     "@types/redux": "^3.6.0",
     "axios": "^0.19.0",
+    "codemirror": "^5.49.2",
     "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
@@ -30,6 +32,7 @@
     "prettier": "^1.18.2",
     "query-string": "^6.8.3",
     "react": "^16.11.0",
+    "react-codemirror2": "^6.0.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
